# universityCourseProgress

./: LICENSE  README.md  courseProgress.py  requirements.txt  setup.cfg  setup.py  test_courseProgress.py
src/courseProgress/: __init__.py  courseProgress.py
tests/: test.py  test_courseProgress.py
