[metadata]
# replace with your username:
name = courseProgress
version = 0.0.1
author = Ben Davidson
author_email = ben.davidson@dynatrace.com
description = Track the team progress of a university course
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tukanuk/universityCourseProgress
project_urls =
    Bug Tracker = https://github.com/tukanuk/universityCourseProgress/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src